--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@ header {
 }
 
 .header-content {
-  /* margin-left: 156px; */
   width: 485px;
 }
 
@@ -46,6 +45,10 @@ header {
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
+}
+
+.header-content a i {
+  margin-left: 8px;
 }
 
 .header-img img {
@@ -121,7 +124,7 @@ footer {
 }
 
 .footer_img img {
-  height: 170px;
+  height: 110px;
   width: 483px;
 }
 
@@ -137,4 +140,46 @@ footer {
   font-size: 18px;
   line-height: 24px;
   color: #000000;
+}
+
+/* media query here  */
+@media only screen and (max-width: 668px) {
+  header {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 50px;
+  }
+
+  .header-content {
+    width: 278px;
+  }
+
+  .header-content h1 {
+    font-size: 36px;
+    line-height: 50px;
+  }
+
+  .header-img img {
+    width: 329px;
+    height: 259.17px;
+    padding-top: 50px;
+    padding-bottom: 61px;
+  }
+
+  /* players  */
+  .players {
+    grid-template-columns: repeat(1, 1fr);
+    grid-row-gap: 24px;
+  }
+
+  /* footer  */
+  footer {
+    padding-top: 43px;
+  }
+
+  .footer_img img {
+    height: 63px;
+    width: 275px;
+  }
 }
