--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ Gallery section css code start here
 }
 
 .heading {
-  font-size: 40px;
+  font-size: 36px;
   margin: 0;
 }
 
@@ -148,6 +148,11 @@ highlights section css code start here
   align-items: center;
 }
 
+.highlight-video {
+  margin-top: 30px;
+  width: 900px;
+  height: 500px;
+}
 /*---------------------------------------- 
 Footer section css code start here 
 -----------------------------------------*/
@@ -187,6 +192,7 @@ footer {
     justify-content: center;
     align-items: center;
     padding-top: 50px;
+    width: 100%;
   }
 
   .header-content {
@@ -210,6 +216,20 @@ footer {
   .gallery-img {
     grid-template-columns: repeat(1, 1fr);
     grid-row-gap: 24px;
+  }
+
+  .heading {
+    font-size: 28px;
+  }
+
+  .gallery-content,
+  .highlight-content {
+    width: 300px;
+  }
+
+  .highlight-video {
+    width: 300px;
+    height: 200px;
   }
 
   /* footer  */
